# vk2d

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: hello_sprite.rs  shader_gallery.rs  target_view_readback.rs
src/: blend.rs  color.rs  context.rs  egui_overlay.rs  error.rs  frame.rs  gpu_timer.rs  handles.rs  input.rs  lib.rs  material.rs  shapes.rs  sprite.rs  target.rs  text.rs  view.rs
tests/: compile_wgsl.rs  material_sprite_readback.rs  material_textures.rs  target_view_readback.rs  texture_color_space.rs
