[package]
name = "vk2d"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Standalone immediate-mode 2D renderer on wgpu/Vulkan with WGSL shaders."
repository = "https://github.com/soulwax/EchoWarrior"
keywords = ["wgpu", "vulkan", "2d", "renderer", "wgsl"]
categories = ["rendering", "game-development"]

[dependencies]
# `spirv` enables `ShaderSource::SpirV`, which the WGSL->SPIR-V startup path
# feeds (naga compiles WGSL to SPIR-V, wgpu consumes the bytecode).
wgpu = { version = "29", features = ["spirv"] }
winit = "0.30"
pollster = "0.4"
naga = { version = "29", features = ["wgsl-in", "spv-out"] }
fontdue = "0.9"
# Reinterprets a Vec<f32>/Vec<u16> geometry buffer as &[u8] for
# queue.write_buffer without a per-element to_le_bytes()/extend_from_slice
# copy loop. Widely used, no unsafe in consumer code (the crate's own cast
# functions are the only unsafe, audited upstream).
bytemuck = "1"

# Optional integrations, off by default so the core crate's dependency surface
# stays small.
egui = { version = "0.35", optional = true }
egui-wgpu = { version = "0.35", optional = true }
egui-winit = { version = "0.35", optional = true, default-features = false, features = [
    "links",
    "wayland",
    "x11",
] }

[features]
default = []
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]
winit-input = []
